# ComfyUI-PromptComposer

./: README.MD  __init__.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
config/: prompt_config.txt  prompt_group.txt
js/: prompt_composer.js
samples/: PromptComposer_Flux.json  PromptComposer_Flux_PuLID.json  PromptComposer_Flux_ReActor.json  PromptComposer_SDXL.json  PromptComposer_SDXL_EComID.json  PromptComposer_SDXL_InstantID.json  PromptComposer_SDXL_InstantID_Softedge.json  PromptComposer_SDXL_Reactor.json
